[project]
name = "deploy-certificate-to-aliyun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "filwaline", email = "skywalker950925@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aliyun-python-sdk-cdn>=3.8.8",
    "aliyun-python-sdk-core>=2.16.0",
]

[project.scripts]
deploy-certificate-to-aliyun = "deploy_certificate_to_aliyun:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
